2019-1/230/users/4028/executions/1762_1576.log
== SUBMITION (2019-05-27 17:16:59) 
-- CODE:
from numpy import *
# Entrada
ve = array(int(input("Sequencia de jogadas de Eusápia:")))
vb = array(int(input("Sequencia de jogadas de Barsanulfo:")))

i = 0 # posição dos vetores
pe = 0 # ve
pb = 0

# Condições de laço
while (i < size(ve)):
	if (ve[i] == 11):
		if (vb[i] == 22):
			pb += 1
		if (vb[i] == 33):
			pe += 1	
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	i = i + 1
if (pe > pb):
	print("EUSAPIA")
elif(pe < pb):
	print("BARSANULFO")
elif(pe == pb):
	print("EMPATE")


	
		

	
-- EXECUTION TIME:
0.401028
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1762/1576/main.py", line 3, in <module>
    ve = array(int(input()))
ValueError: invalid literal for int() with base 10: '[33,22,33,22,11,11,33,22,11,11,22,33]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:17:27) 
-- CODE:
from numpy import *
# Entrada
ve = array(eval(input("Sequencia de jogadas de Eusápia:")))
vb = array(eval(input("Sequencia de jogadas de Barsanulfo:")))

i = 0 # posição dos vetores
pe = 0 # ve
pb = 0

# Condições de laço
while (i < size(ve)):
	if (ve[i] == 11):
		if (vb[i] == 22):
			pb += 1
		if (vb[i] == 33):
			pe += 1	
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	i = i + 1
if (pe > pb):
	print("EUSAPIA")
elif(pe < pb):
	print("BARSANULFO")
elif(pe == pb):
	print("EMPATE")


	
		

	
-- EXECUTION TIME:
0.369714
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:18:09) 
-- CODE:
from numpy import *
# Entrada
ve = array(eval(input("Sequencia de jogadas de Eusápia:")))
vb = array(eval(input("Sequencia de jogadas de Barsanulfo:")))

i = 0 # posição dos vetores
pe = 0 # ve
pb = 0

# Condições de laço
while (i < size(ve)):
	if (ve[i] == 11):
		if (vb[i] == 22):
			pb += 1
		if (vb[i] == 33):
			pe += 1	
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	i = i + 1
print(size(vb))
if (pe > pb):
	print("EUSAPIA")
elif(pe < pb):
	print("BARSANULFO")
elif(pe == pb):
	print("EMPATE")


	
		

	
-- EXECUTION TIME:
0.332304
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:18:23) 
-- CODE:
from numpy import *
# Entrada
ve = array(eval(input("Sequencia de jogadas de Eusápia:")))
vb = array(eval(input("Sequencia de jogadas de Barsanulfo:")))

i = 0 # posição dos vetores
pe = 0 # ve
pb = 0

# Condições de laço
while (i < size(ve)):
	if (ve[i] == 11):
		if (vb[i] == 22):
			pb += 1
		if (vb[i] == 33):
			pe += 1	
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	i = i + 1
print(size(vb))
if (pe > pb):
	print("EUSAPIA")
elif(pe < pb):
	print("BARSANULFO")
elif(pe == pb):
	print("EMPATE")


	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:18:36) 
-- CODE:
from numpy import *
# Entrada
ve = array(eval(input("Sequencia de jogadas de Eusapia:")))
vb = array(eval(input("Sequencia de jogadas de Barsanulfo:")))

i = 0 # posição dos vetores
pe = 0 # ve
pb = 0

# Condições de laço
while (i < size(ve)):
	if (ve[i] == 11):
		if (vb[i] == 22):
			pb += 1
		if (vb[i] == 33):
			pe += 1	
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	i = i + 1
print(size(vb))
if (pe > pb):
	print("EUSAPIA")
elif(pe < pb):
	print("BARSANULFO")
elif(pe == pb):
	print("EMPATE")


	
		

	
-- EXECUTION TIME:
0.584941
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:18:39) 
-- CODE:
from numpy import *
# Entrada
ve = array(eval(input("Sequencia de jogadas de Eusapia:")))
vb = array(eval(input("Sequencia de jogadas de Barsanulfo:")))

i = 0 # posição dos vetores
pe = 0 # ve
pb = 0

# Condições de laço
while (i < size(ve)):
	if (ve[i] == 11):
		if (vb[i] == 22):
			pb += 1
		if (vb[i] == 33):
			pe += 1	
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	i = i + 1
print(size(vb))
if (pe > pb):
	print("EUSAPIA")
elif(pe < pb):
	print("BARSANULFO")
elif(pe == pb):
	print("EMPATE")


	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:19:47) 
-- CODE:
from numpy import *
# Entrada
ve = array(eval(input("Sequencia de jogadas de Eusapia:")))
vb = array(eval(input("Sequencia de jogadas de Barsanulfo:")))

i = 0 # posição dos vetores
pe = 0 # ve
pb = 0

# Condições de laço
while (i < size(ve)):
	if (ve[i] == 11):
		if (vb[i] == 22):
			pb += 1
		if (vb[i] == 33):
			pe += 1	
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	
	elif (ve[i] == 33):
		if (vb[i] == 11):
			pb += 1
		if (vb[i] == 22):
			pe += 1
	i = i + 1
print(size(vb))
if (pe > pb):
	print("EUSAPIA")
elif(pe < pb):
	print("BARSANULFO")
elif(pe == pb):
	print("EMPATE")


	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:20:00) 
-- CODE:
from numpy import *
# Entrada
ve = array(eval(input("Sequencia de jogadas de Eusapia:")))
vb = array(eval(input("Sequencia de jogadas de Barsanulfo:")))

i = 0 # posição dos vetores
pe = 0 # ve
pb = 0

# Condições de laço
while (i < size(ve)):
	if (ve[i] == 11):
		if (vb[i] == 22):
			pb += 1
		if (vb[i] == 33):
			pe += 1	
	
	elif (ve[i] == 22):
		if (vb[i] == 11):
			pe += 1
		if (vb[i] == 33):
			pb += 1
	
	elif (ve[i] == 33):
		if (vb[i] == 11):
			pb += 1
		if (vb[i] == 22):
			pe += 1
	i = i + 1
print(size(vb))
if (pe > pb):
	print("EUSAPIA")
elif(pe < pb):
	print("BARSANULFO")
elif(pe == pb):
	print("EMPATE")


	
		

	
-- EXECUTION TIME:
0.359406
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:04:48) 
-- CODE:
from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (ve[i] == 11):
		if (vb[i] == 22):
			vb = vb + 1
		if (vb[i] == 33):
			ve = ve + 1
	elif (ve[i] == 22):
		if (vb[i] == 11):
			ve = ve + 1
		if (vb[i] == 33):
			vb = vb + 1
	elif (ve[i] == 33):
		if (vb[i] == 11):
			vb = vb + 1
		if (ve[i] == 22):
			ve = ve + 1
	i = i + 1
# Saida do programa
print(size(v2))

if (pe > pb):
	print("EUSAPIA")
if (pe < pb):
	print("BARSANULFO")
if (pe == pb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:07:37) 
-- CODE:

from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb = vb + 1
		if (v2[i] == 33):
			ve = ve + 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb = vb + 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb = vb + 1
		if (v1[i] == 22):
			ve = ve + 1
	i = i + 1
# Saida do programa
print(size(v2))

if (pe > pb):
	print("EUSAPIA")
if (pe < pb):
	print("BARSANULFO")
if (pe == pb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:08:33) 
-- CODE:

from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb = vb + 1
		if (v2[i] == 33):
			ve = ve + 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb = vb + 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb = vb + 1
		if (v1[i] == 22):
			ve = ve + 1
	i = i + 1
# Saida do programa
print(size(v2))

if (ve > vb):
	print("EUSAPIA")
if (pe < pb):
	print("BARSANULFO")
if (pe == pb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:09:05) 
-- CODE:

from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb = vb + 1
		if (v2[i] == 33):
			ve = ve + 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb = vb + 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb = vb + 1
		if (v1[i] == 22):
			ve = ve + 1
	i = i + 1
# Saida do programa
print(size(v2))

if (ve > vb):
	print("EUSAPIA")
if (ve < vb):
	print("BARSANULFO")
if (ve == vb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 09:09:37) 
-- CODE:

from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb = vb + 1
		if (v2[i] == 33):
			ve = ve + 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb = vb + 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb = vb + 1
		if (v1[i] == 22):
			ve = ve + 1
	i = i + 1
# Saida do programa
print(size(v2))

if (ve > vb):
	print("EUSAPIA")
if (ve < vb):
	print("BARSANULFO")
if (ve == vb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- EXECUTION TIME:
0.407765
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 09:10:39) 
-- CODE:


from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb = vb + 1
		if (v2[i] == 33):
			ve = ve + 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb = vb + 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb = vb + 1
		if (v1[i] == 22):
			ve = ve + 1
	i = i + 1
# Saida do programa
print(size(v2))

if (pe > pb):
	print("EUSAPIA")
if (pe < pb):
	print("BARSANULFO")
if (pe == pb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- EXECUTION TIME:
0.365443
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1762/1576/main.py", line 34, in <module>
    if (pe > pb):
NameError: name 'pe' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 09:11:06) 
-- CODE:


from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb = vb + 1
		if (v2[i] == 33):
			ve = ve + 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb = vb + 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb = vb + 1
		if (v1[i] == 22):
			ve = ve + 1
	i = i + 1
# Saida do programa
print(size(v2))

if (ve > vb):
	print("EUSAPIA")
if (ve < vb):
	print("BARSANULFO")
if (ve == vb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- EXECUTION TIME:
0.452673
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:13:33) 
-- CODE:

from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb = vb + 1
		if (v2[i] == 33):
			ve = ve + 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb = vb + 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb = vb + 1
		if (v1[i] == 22):
			ve = ve + 1
	i = i + 1
# Saida do programa
print(size(v2))

if (ve > vb):
	print("EUSAPIA")
if (ve < vb):
	print("BARSANULFO")
if (ve == vb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:14:11) 
-- CODE:

from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb = vb + 1
		if (v2[i] == 33):
			ve = ve + 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb = vb + 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb = vb + 1
		if (v1[i] == 22):
			ve = ve + 1
	i = i + 1
# Saida do programa
print(size(v1))

if (ve > vb):
	print("EUSAPIA")
if (ve < vb):
	print("BARSANULFO")
if (ve == vb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 09:16:09) 
-- CODE:

from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb += 1
		if (v2[i] == 33):
			ve += 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb += 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb += 1
		if (v1[i] == 22):
			ve += 1
	i += 1
# Saida do programa
print(size(v1))

if (ve > vb):
	print("EUSAPIA")
if (ve < vb):
	print("BARSANULFO")
if (ve == vb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- EXECUTION TIME:
0.424283
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:16:11) 
-- CODE:

from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria

i = 0 # posição dos vetores
ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo

while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb += 1
		if (v2[i] == 33):
			ve += 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb += 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb += 1
		if (v1[i] == 22):
			ve += 1
	i += 1
# Saida do programa
print(size(v1))

if (ve > vb):
	print("EUSAPIA")
if (ve < vb):
	print("BARSANULFO")
if (ve == vb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:16:35) 
-- CODE:

from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria


ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo
i = 0 # posição dos vetores
while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb += 1
		if (v2[i] == 33):
			ve += 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb += 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb += 1
		if (v1[i] == 22):
			ve += 1
	i += 1
# Saida do programa
print(size(v1))

if (ve > vb):
	print("EUSAPIA")
if (ve < vb):
	print("BARSANULFO")
if (ve == vb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 09:43:28) 
-- CODE:

from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria


ve = 0 # pontos de eusapia
vb = 0 # pontos de barsanulfo
i = 0 # posição dos vetores
while ( i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			vb += 1
		if (v2[i] == 33):
			ve += 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			ve = ve + 1
		if (v2[i] == 33):
			vb += 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			vb += 1
		if (v1[i] == 22):
			ve += 1
	i += 1
# Saida do programa
print(size(v1))

if (ve > vb):
	print("EUSAPIA")
if (ve < vb):
	print("BARSANULFO")
if (ve == vb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- EXECUTION TIME:
0.338171
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:51:14) 
-- CODE:
from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria


pe = 0 # pontos de eusapia
pb = 0 # pontos de barsanulfo
i = 0 # posição dos vetores
while (i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			pb += 1
		if (v2[i] == 33):
			pe += 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			pe += 1
		if (v2[i] == 33):
			pb += 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			pb += 1
		if (v1[i] == 22):
			pe += 1
	i += 1
# Saida do programa
print(size(v1))

if (pe > pb):
	print("EUSAPIA")
if (pe < pb):
	print("BARSANULFO")
if (pe == pb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:52:25) 
-- CODE:
from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria


pe = 0 # pontos de eusapia
pb = 0 # pontos de barsanulfo
i = 0 # posição dos vetores
while (i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			pb += 1
		if (v2[i] == 33):
			pe += 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			pe += 1
		if (v2[i] == 33):
			pb += 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			pb += 1
		if (v2[i] == 22):
			pe += 1
	i += 1
# Saida do programa
print(size(v1))

if (pe > pb):
	print("EUSAPIA")
if (pe < pb):
	print("BARSANULFO")
if (pe == pb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 09:52:40) 
-- CODE:
from numpy import * 
# Entradas
v1 = array(eval(input("sequencia de jogadas de eusapia:")))
v2 = array(eval(input("sequencia de jogadas de barsanulfo:")))

# Parte intermediaria


pe = 0 # pontos de eusapia
pb = 0 # pontos de barsanulfo
i = 0 # posição dos vetores
while (i < size(v1)):
	if (v1[i] == 11):
		if (v2[i] == 22):
			pb += 1
		if (v2[i] == 33):
			pe += 1
	elif (v1[i] == 22):
		if (v2[i] == 11):
			pe += 1
		if (v2[i] == 33):
			pb += 1
	elif (v1[i] == 33):
		if (v2[i] == 11):
			pb += 1
		if (v2[i] == 22):
			pe += 1
	i += 1
# Saida do programa
print(size(v1))

if (pe > pb):
	print("EUSAPIA")
if (pe < pb):
	print("BARSANULFO")
if (pe == pb):
	print("EMPATE")

	



	
	
	
	
	
	
	
	
	
	
	
	
		

	
-- EXECUTION TIME:
0.503128
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
